<resources>
    <string name="app_name">Hardware Barcode Scanner</string>
    <string name="scan_result">Scan Result：</string>
    <string name="button_start">Start</string>
    <string name="button_clear">Clear</string>
    <string name="auto_clear_edittext">Auto Clean EditText</string>
    <string name="hid_title">HID switch</string>
    <string name="hid_settings">Keyboard entry(HID)</string>
    <string name="hid_BTHolder">BTHolder</string>
    <string name="hid_settings_summary">Returns the result to any input box</string>
    <string name="hid_BTHolder_summary">Connect to the Bluetooth Holder Automatic on Boot</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="transmit">Transmit</string>
    <string name="no_transmit">Do not transmit</string>
    <string name="checksum">Checksum</string>
    <string name="length">Length</string>
    <string name="len_min">Min:</string>
    <string name="len_max">Max:</string>
    <string name="str_default">Default</string>
    <string name="base_settings_title">BASE SETTINGS</string>
    <string name="enter_settings">Wrap after outputting results</string>
    <string name="enter_settings_summary">Increase the enter suffix</string>
    <string name="sound_settings">sound</string>
    <string name="sound_settings_summary">Play beeper when results back</string>
    <string name="vibrate_settings">vibrate</string>
    <string name="vibrate_settings_summary">Vibration when return the result</string>
    <string name="export_title">Export</string>
    <string name="data_editing_summary">Data Editing</string>
    <string name="data_editing_pre">Prefix:</string>
    <string name="data_editing_suf">Suffix:</string>
    <string name="data_editing_pre_hint">Prefix Content</string>
    <string name="data_editing_suf_hint">Suffix Content</string>
    <string name="data_editing_set">Set</string>
    <string name="data_editing_pre_title">Please enter to set up the prefix</string>
    <string name="data_editing_suf_title">Please enter to set up the suffix</string>
    <string name="data_editing_table_suffix">Tab</string>
    <string name="main_settings">Settings</string>
    <string name="main_about">About</string>
    <string name="symbologies">symbologies</string>
    <string name="symbologies_title">favorite</string>
    <string name="symbologies_code128">Code128</string>
    <string name="symbologies_code39">Code39</string>
    <string name="symbologies_upc_a">UPC-A</string>
    <string name="symbologies_ean_13">EAN-13</string>
    <string name="symbologies_command">other symbologies</string>
    <string name="symbologies_command_operator">operator</string>
    <string name="symbologies_command_select">symbologies</string>
    <string name="symbologies_set">Set</string>
    <string name="summary_about">"1、Software version number: 2.0;\n
2、Configuration and use of the scanning module, initialization is not configured by default configuration."</string>
    <string name="str_select_moduletype">Select the corresponding module type:</string>
    <string name="str_module_sig">One-dimensional module</string>
    <string name="str_module_qr">Two-dimensional module</string>
    <string name="str_selcet_scankey">Select Trigger Key for Scan:</string>
    <string name="str_key_left">Left Physical button</string>
    <string name="str_key_right">Right Physical button</string>
    <string name="str_restore_factory">Reset Scanning Module</string>
    <string name="str_factory">Factory Settings</string>
    <string name="str_timeout_prompt">Activation Timeout(1~%1$ds):</string>
    <string name="str_timeout_set">TimeOut Settings</string>
    <string name="str_timeout_title">TimeOut Settings</string>
    <string name="str_timeout_input">Please Input Timeout Value：</string>
    <string name="str_ensure">ensure</string>
    <string name="str_cancel">cancel</string>
    <string name="str_invalid_value">Please input valid values.</string>
    <string name="str_bluetooth_prompt">Bluetooth Device of BLE_Handle no Paired.</string>
    <string name="start_serialport_service">Scanning service has been opened</string>
    <string name="baud_choose">Select baud rate</string>
    <string name="broadcast">setting broadcast</string>
    <string name="broadcast_action">broadcast action</string>
    <string name="broadcast_data">data</string>
    <string name="file_peress">File permissions are required to create files</string>
    <string name="file_request">Create File</string>
    <string name="setting_device">Module selection</string>
    <string name="device_module">Device module</string>
    <string name="honeywelltwo">honeywell Two dimensional</string>
    <string name="honeywellone">honeywell One dimensional</string>
    <string name="motorola">Motorola</string>
    <string name="hr22p">HR22+</string>
    <string name="em3100">EM3100</string>
    <string name="me11">ME11</string>
    <string name="m1" translatable="false">M1</string>
    <string name="motoloraone">Motorola One dimensional</string>
    <string name="totinfo_scanner">Totinfo two dimensional</string>
    <string name="newland_scanner">Newland two dimensional</string>
    <string name="sure_modlue">Confirm module selection</string>
    <string name="sure_module_contents">Confirm the selected value of the current device\'s module settings</string>
    <string name="sure">Sure</string>
    <string name="always_linght">Always Scanning Mode</string>
    <string name="cancel">Cancel</string>
    <string name="add_pre">add prefix</string>
    <string name="add_back_data_title">add Suffix</string>
    <string name="please_input_date">Please enter the data you need to add</string>
    <string name="service_boot">Auto start Service</string>
    <string name="blue_scan">Bluetooth Handle Open</string>
    <string name="voice_choose">Select audio</string>
    <string name="scan_mode_choose">Scanning mode selection</string>
    <string name="left_scan_btn">Left key scan enable</string>
    <string name="right_scan_btn">Right key scan enable</string>
    <string name="fkey_btn">F-key scan enable</string>
    <string name="f1key_btn">F1 key scan enable</string>
    <string name="f2key_btn">F2 key scan enable</string>
    <string name="xuanfu_scan">Scan suspension button</string>
    <string name="space_filter">Filter spaces at both ends of barcode</string>
    <string name="replace_invisibleChar">Convert Invisible Characters</string>
    <string name="app_version">app version</string>
    <string name="connect_error">connect error!</string>
    <string name="connect_timeout">connect timeout!</string>
    <string name="bad_network">bad network!</string>
    <string name="parse_error">parse error!</string>
    <string name="unknown_error">unknown error!</string>
    <string name="response_return_error">response return error!</string>
    <string name="down_progress">Download progress</string>
    <string name="find_new_version">Discovery of new versions</string>
    <string name="app_size">Version size:%1$2s</string>
    <string name="new_version">last version</string>
    <string name="chek_updarte">Check for updates</string>
    <string name="update">update</string>
    <string name="tips">Tips</string>
    <string name="tips_ki">Please select the data to be cleaned up</string>
    <string name="all_data">All data</string>
    <string name="tips_nono">are you sure?</string>
    <string name="clipboard_open">clipboard open</string>
    <string name="table_set">TABLE  Setting</string>
    <string name="add_hou">Add it later</string>
    <string name="add_qian">Add in front</string>
    <string name="close">Close</string>
    <string name="check_update">check update</string>
    <string name="read_setting_item">Reread Settings Configuration Items</string>
    <string name="sure_setting_read">Rereading will reset the default setting. Do you want to continue?</string>
    <string name="reset_finish">reset finish</string>
    <string name="open_all_code">open all barcode</string>
    <string name="close_all_code">close all barcode</string>
    <string name="widget_input">Widget input switch</string>
    <string name="exit_app_tips">Click again to exit the application</string>
    <string name="choose_baud_rate">Choose Baud Rate(reboot devices the effective)</string>
    <string name="app_update_codes">app update code</string>
    <string name="add_enter">Add Enter</string>
    <string name="scan_encoding">Scan encoding</string>
    <string name="totinfo_symb_title">Totinfo Symbologies</string>
    <string name="newland_symb_title">Newland Symbologies</string>
    <string name="c11_chk_1">1byte,MOD11</string>
    <string name="c11_chk_2">2bytes,MOD11/MOD11</string>
    <string name="c11_chk_3">2bytes,MOD11/MOD9</string>
    <string name="c11_chk_4">1byte,MOD11(len&lt;=10); 2bytes,MOD11/MOD11(len&gt;10)</string>
    <string name="c11_chk_5">1byte,MOD11(len&lt;=10); 2bytes,MOD11/MOD9(len&gt;10)</string>
    <string name="ea8_exp">Convert EAN-8 to EAN-13</string>
    <string name="upe_exp">Convert UPC-E to UPC-A</string>
    <string name="pre_1">Transmit system symbol</string>
    <string name="pre_2">Transmit country code + system symbol</string>
    <string name="pdf_dou">PDF417 double code</string>
    <string name="qrc_dou">QR double code</string>
    <string name="dou_pdf_1">Single PDF417 only</string>
    <string name="dou_pdf_2">Double PDF417 only</string>
    <string name="dou_pdf_both">Both single and double PDF417</string>
    <string name="dou_qrc_1">Single QR only</string>
    <string name="dou_qrc_2">Double QR only</string>
    <string name="dou_qrc_both">Both single and double QR</string>
    <string name="fnc1">FNC1</string>
    <string name="ad2">Adds on 2 expansion</string>
    <string name="ad5">Adds on 5 expansion</string>
    <string name="req">Require adds on expansion</string>
    <string name="pre">Transmit pre-code</string>
    <string name="tsc">Transmit start/end characters</string>
    <string name="asc">Full ASCII</string>
    <string name="scf">Start/end character format</string>
    <string name="tai">Transmit A1(01) character</string>
    <string name="tck">Code 11 checksum</string>
    <string name="t10">ISBN format</string>
    <string name="eci">ECI output</string>
    <string name="enc">Encoding</string>
    <string name="rec">Rectangle code</string>
    <string name="float_btn_size">Change float button size</string>
    <string name="save_config_to_file">Export configs</string>
    <string name="save_config_completed">Export completed</string>
    <string name="save_config_failed">Export configs failed</string>
    <string name="load_config_from_file">Import configs</string>
    <string name="load_config_completed">Import completed</string>
    <string name="load_config_failed">Import configs failed</string>
    <string name="input_type">input type</string>
    <string name="hex_dig" translatable="false">0123456789abcdefABCDEF</string>
    <string name="char_a">Char 0x</string>
    <string name="to_char_b">to 0x</string>
    <string name="scanner_result">Scanner Result</string>
    <string name="delete_bytes">String truncation</string>
    <string name="positionMode">Position mode</string>
    <string name="startPosition">Start position</string>
    <string name="stopPosition">Stop position</string>
    <string name="characterMode">Character mode</string>
    <string name="startChar">Start char</string>
    <string name="stopChar">Stop char</string>
    <string name="replace_character">Replace character(HEX)</string>
    <string name="s_character">Original char</string>
    <string name="a_character">Replace char</string>
    <string name="edit_or_delete_character">Operation</string>
    <string name="add_character">ADD</string>
    <string name="replace_char_from">Replace char(HEX):</string>
    <string name="replace_char_to">Replace with(HEX):</string>
</resources>