<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scanner.hardware.StartActivity">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="90"
        android:title="@string/main_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/symbologies"
        android:orderInCategory="91"
        android:title="@string/symbologies"
        app:showAsAction="never" />

    <item
        android:id="@+id/module_setting"
        android:orderInCategory="100"
        android:title="@string/setting_device"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="101"
        android:title="@string/main_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/data"
        android:orderInCategory="102"
        android:title="@string/scanner_result"
        app:showAsAction="never" />

</menu>
