<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/replace_character"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/s_character"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#000000" />

            <TextView
                android:id="@+id/aim"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/a_character"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#000000" />

            <TextView
                android:id="@+id/what"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/edit_or_delete_character"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/replace_data_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="150sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close"
                android:textSize="15sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/add_character"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>