<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/line"
    android:orientation="vertical"
    android:showDividers="middle|end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/char_a" />

        <EditText
            android:id="@+id/et_a"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:digits="@string/hex_dig"
            android:lines="1"
            android:maxLength="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_char_b" />

        <EditText
            android:id="@+id/et_b"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:digits="@string/hex_dig"
            android:lines="1"
            android:maxLength="2" />

        <Button
            android:id="@+id/save"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="保存" />
    </LinearLayout>
</LinearLayout>
