<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/source_char_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:text="@string/replace_char_from"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:text="0x"
                android:textAlignment="viewEnd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/source_char_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:digits="0123456789abcdefABCDEF"
                android:maxLength="2"
                android:maxLines="1"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aim_char_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:text="@string/replace_char_to"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:text="0x"
                android:textAlignment="viewEnd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/aim_char_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:digits="0123456789abcdefABCDEF"
                android:maxLength="2"
                android:maxLines="1"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detail_replace_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="15sp" />

            <Button
                android:id="@+id/detail_replace_sure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/sure"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>